# x_trigger_prompt_x

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGE_CONTROL_PACKET.md  README.md  RELEASE_NOTES_0.0.1.md  SECURITY.md  auto_trigger_copilot_chat.py  calibrate_trigger_profile.py  pyproject.toml  requirements.txt  run_trigger_prompt.ps1  x_trigger_prompt_x.py
.github/workflows/: ci.yml
tests/: test_auto_trigger_copilot_chat.py  test_calibrate_trigger_profile.py  test_x_trigger_prompt_x.py
